adding nextplay logo

--- a/src/app/layout/components/top-bar/top-bar.component.html
+++ b/src/app/layout/components/top-bar/top-bar.component.html
@@ -1,6 +1,6 @@
 <div class="layout-topbar">
     <a class="layout-topbar-logo" routerLink="">
-         <span>SAKAI</span>
+         <span><img src="../../../../assets/images/nextPlay.png" alt="logo"></span>
     </a>
         <i #menubutton (click)="layoutService.onMenuToggle()" class="pi pi-bars cursor-pointer" style="color: 'var(--primary-color)'"></i>
 
