--- a/src/app/layout/components/layout/layout.component.scss
+++ b/src/app/layout/components/layout/layout.component.scss
@@ -220,7 +220,7 @@
         .layout-sidebar {
             transform: translateX(-100%);
             left: 0;
-            top: 0;
+            top: 4rem;
             height: 100vh;
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
