--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-layout></app-layout>
+<!-- <app-layout></app-layout> -->
       <!-- <p-dropdown (onChange)="getTheme()" [options]="cities" [(ngModel)]="selectedCity" placeholder="Select a City" [editable]="true" optionLabel="name"></p-dropdown> -->
+<router-outlet></router-outlet>
