--- a/src/app/layout/components/layout/layout.component.html
+++ b/src/app/layout/components/layout/layout.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="layout-main-container">
         <div class="layout-main">
-            <p>main content works</p>
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
