--- a/src/app/layout/components/side-bar/side-bar.component.html
+++ b/src/app/layout/components/side-bar/side-bar.component.html
@@ -1,5 +1,6 @@
 <ul class="layout-menu">
-    <li>home</li>
+    <li class="cursor-pointer"><a [routerLink]="'movies'">movies</a></li>
+    <li class="cursor-pointer"><a [routerLink]="'tv-series'">tv-series</a></li>
     <li>home</li>
     <li>home</li>
     <li>home</li>
