--- a/src/app/layout/components/side-bar/side-bar.component.html
+++ b/src/app/layout/components/side-bar/side-bar.component.html
@@ -1,9 +1,10 @@
-<ul class="layout-menu">
-    <li class="cursor-pointer"><a [routerLink]="'movies'">movies</a></li>
-    <li class="cursor-pointer"><a [routerLink]="'tv-series'">tv-series</a></li>
-    <li>home</li>
-    <li>home</li>
-    <li>home</li>
-    <li>home</li>
-    <li>home</li>
+<ul class="layout-menu m-0 p-0 list-none">
+    @for (navitems of menuitems; track $index) {
+        <li class="cursor-pointer "><a class="no-underline" routerLinkActive="text-primary font-bold" [routerLink]="navitems.routerLink">{{navitems.label}}</a></li>
+        @if (navitems.items) {
+            @for (item of navitems.items; track $index) {
+                <li class="cursor-pointer p-2 mt-2 hover:surface-300"><a class="no-underline" routerLinkActive="text-primary font-bold" [routerLink]="item.routerLink"><i class="{{item.icon}} + mx-2" style="font-size: 1rem"></i>{{item.label}}</a></li>
+            }
+        }
+    }
 </ul>
