--- a/src/app/layout/components/dashboard/dashboard.component.html
+++ b/src/app/layout/components/dashboard/dashboard.component.html
@@ -1,1 +1,63 @@
-<p>dashboard works!</p>
+<section class="dashboard">
+    <div class="grid">
+        <div class="col-12 md:col-6 lg:col-12 h-26rem">
+            <p-carousel 
+        [value]="products" 
+        [numVisible]="3" 
+        [numScroll]="3" 
+        [circular]="true" 
+        [responsiveOptions]="responsiveOptions" 
+        autoplayInterval="3000">
+        <ng-template let-product pTemplate="item">
+
+            <div>{{product.name}}</div>
+            
+        </ng-template>
+    
+    </p-carousel>
+        </div>
+    </div>
+    
+    <div class="grid mt-5">
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
+        </div>
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
+        </div>
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
+        </div>
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
+        </div>
+    </div>
+    <div class="grid mt-5">
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
+        </div>
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
+        </div>
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
+        </div>
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
+        </div>
+    </div>
+    <div class="grid mt-5">
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
+        </div>
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
+        </div>
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
+        </div>
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
+        </div>
+    </div>
+</section>
