--- a/src/app/layout/components/layout/layout.component.scss
+++ b/src/app/layout/components/layout/layout.component.scss
@@ -5,7 +5,7 @@
     // z-index: 99;
     overflow-y: auto;
     user-select: none;
-    top: 4rem;
+    top: 5rem;
     left: 0;
     transition: transform .2s, left .2s;
     background-color: var(--surface-overlay);
@@ -220,7 +220,7 @@
         .layout-sidebar {
             transform: translateX(-100%);
             left: 0;
-            top: 4rem;
+            top: 0;
             height: 100vh;
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
