--- a/src/app/layout/components/layout/layout.component.scss
+++ b/src/app/layout/components/layout/layout.component.scss
@@ -2,13 +2,13 @@
     position: fixed;
     width: 300px;
     height: calc(100vh - 1rem);
-    // z-index: 99;
+    z-index: 99;
     overflow-y: auto;
     user-select: none;
     top: 5rem;
     left: 0;
     transition: transform .2s, left .2s;
-    background-color: var(--surface-overlay);
+    // background-color: var(--surface-hover);
     // border-radius: 12px;
     padding: 0.5rem 1.5rem;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, .02), 0px 0px 2px rgba(0, 0, 0, .05), 0px 1px 4px rgba(0, 0, 0, .08);
