--- a/src/app/layout/components/dashboard/dashboard.component.html
+++ b/src/app/layout/components/dashboard/dashboard.component.html
@@ -1,7 +1,17 @@
 <section class="dashboard">
     <div class="grid">
         <div class="col-12 md:col-6 lg:col-12 h-26rem">
-            <p-carousel 
+
+            <p-carousel
+ [value]="images" 
+ autoplayInterval="3000"
+ [responsiveOptions]="responsiveOptions" 
+ [circular]="true">
+    <ng-template let-image pTemplate="item">
+        <img [src]="image.image" style="width:100%; height: 300px;" alt="PrimeNG Carousel Slide" />
+    </ng-template>
+</p-carousel>
+            <!-- <p-carousel 
         [value]="products" 
         [numVisible]="3" 
         [numScroll]="3" 
@@ -14,11 +24,11 @@
             
         </ng-template>
     
-    </p-carousel>
+    </p-carousel> -->
         </div>
     </div>
     
-    <div class="grid mt-5">
+    <div class="grid mt-8">
         <div class="col-12 md:col-6 lg:col-3">
             <div class="text-center p-3 border-round-sm bg-primary font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
         </div>
