--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,3 @@
+@import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 @import url(../node_modules/primeflex/primeflex.scss);
