--- a/src/app/layout/components/layout/layout.component.scss
+++ b/src/app/layout/components/layout/layout.component.scss
@@ -11,7 +11,7 @@
     // background-color: var(--surface-hover);
     // border-radius: 12px;
     padding: 0.5rem 1.5rem;
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, .02), 0px 0px 2px rgba(0, 0, 0, .05), 0px 1px 4px rgba(0, 0, 0, .08);
+    box-shadow: 0px 3px 5px var(--primary-color), 0px 0px 2px var(--primary-color), 0px 1px 4px var(--primary-color);
 }
 
 .layout-menu {
