adding dashboard content

--- a/src/app/layout/components/side-bar/side-bar.component.html
+++ b/src/app/layout/components/side-bar/side-bar.component.html
@@ -1,18 +1,28 @@
 <ul class="layout-menu m-0 p-0 list-none">
     @for (navitems of menuitems; track $index) {
-        <a 
-            class="no-underline" routerLinkActive="text-primary font-bold" 
-            [routerLink]="navitems.routerLink"> <li class="cursor-pointer">
-            {{navitems.label}}</li>
-        </a>
+        <li class="cursor-pointer">
+            <a 
+            class="no-underline"
+            routerLinkActive="text-primary font-bold" 
+            [routerLink]="navitems.routerLink">
+            {{navitems.label}}
+            </a>
+        </li>
+        
         @if (navitems.items) {
             @for (item of navitems.items; track $index) {
-                <a 
-                    class="no-underline" routerLinkActive="text-primary font-bold"
-                    [routerLink]="item.routerLink">
-                    <li class="cursor-pointer p-2 mt-2 hover:surface-300">
-                    <fa-icon class="mr-2" [icon]="item.icon"></fa-icon> {{item.label}}</li>
-                </a>
+                    <li 
+                        class="cursor-pointer
+                         p-2 mt-2 hover:surface-200"
+                        [routerLink]="item.routerLink">
+                        <a class="no-underline"
+                         routerLinkActive="text-primary font-bold">
+                        <fa-icon 
+                         class="mr-2" 
+                        [icon]="item.icon">
+                        </fa-icon>{{item.label}}</a>
+                    </li>
+                
                 
             }
         }
