--- a/src/app/layout/components/dashboard/dashboard.component.html
+++ b/src/app/layout/components/dashboard/dashboard.component.html
@@ -1,12 +1,13 @@
 <section class="dashboard">
     <div class="grid">
-        <div class="col-12 md:col-6 lg:col-12 h-26rem">
+        <div class="col-12 md:col-6 lg:col-12 h-26rem p-0 m-0">
+            <h1 class="mx-6 text-base"><p-tag class="mx-2"  value="New"/>Release</h1>
             <p-carousel 
     [value]="images" 
     [numVisible]="1" 
     [numScroll]="1" 
-    [circular]="false" 
-    [responsiveOptions]="responsiveOptions"
+    [circular]="true" 
+    [responsiveOptions]="responsiveOptions" 
     >
         <ng-template let-product pTemplate="item">
             <div class="p-0">
@@ -15,7 +16,7 @@
                         <img 
                             src="{{ product.image }}" 
                             [alt]="product.caption" 
-                            class="w-full h-25rem border-round" />
+                            class="w-full h-30rem border-round" />
                     </div>
                 </div>
             </div>
@@ -24,7 +25,7 @@
         </div>
     </div>
     
-    <!-- <div class="grid mt-8">
+    <div class="grid mt-8">
         <div class="col-12 md:col-6 lg:col-3">
             <div class="text-center p-3 border-round-sm  font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
         </div>
@@ -65,5 +66,5 @@
         <div class="col-12 md:col-6 lg:col-3">
             <div class="text-center p-3 border-round-sm  font-bold h-8rem">col-12 md:col-6 lg:col-3</div>
         </div>
-    </div> -->
+    </div>
 </section>
