--- a/src/app/layout/components/layout/layout.component.scss
+++ b/src/app/layout/components/layout/layout.component.scss
@@ -8,130 +8,10 @@
     top: 5rem;
     left: 0;
     transition: transform .2s, left .2s;
-    // background-color: var(--surface-hover);
+    background-color: var(--surface-hover);
     // border-radius: 12px;
     padding: 0.5rem 1.5rem;
-    box-shadow: 0px 3px 5px var(--primary-color), 0px 0px 2px var(--primary-color), 0px 1px 4px var(--primary-color);
-}
-
-.layout-menu {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-
-    .layout-root-menuitem {
-        >.layout-menuitem-root-text {
-            font-size: .857rem;
-            text-transform: uppercase;
-            font-weight: 700;
-            color: var(--surface-900);
-            margin: .75rem 0;
-        }
-
-        >a {
-            display: none;
-        }
-    }
-
-    a {
-        user-select: none;
-
-        &.active-menuitem {
-            >.layout-submenu-toggler {
-                transform: rotate(-180deg);
-            }
-        }
-    }
-
-    li.active-menuitem {
-        >a {
-            .layout-submenu-toggler {
-                transform: rotate(-180deg);
-            }
-        }
-    }
-
-    ul {
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-
-        a {
-            display: flex;
-            align-items: center;
-            position: relative;
-            outline: 0 none;
-            color: var(--text-color);
-            cursor: pointer;
-            padding: .75rem 1rem;
-            border-radius: 12px;
-            transition: background-color .2s, box-shadow .2s;
-
-            .layout-menuitem-icon {
-                margin-right: .5rem;
-            }
-
-            .layout-submenu-toggler {
-                font-size: 75%;
-                margin-left: auto;
-                transition: transform .2s;
-            }
-
-            &.active-route {
-                font-weight: 700;
-                color: var(--primary-color);
-            }
-
-            &:hover {
-                background-color: var(--surface-hover);
-            }
-
-            // &:focus {
-            //     @include focused-inset();
-            // }
-        }
-
-        ul {
-            overflow: hidden;
-            border-radius: 12px;
-
-            li {
-                a {
-                    margin-left: 1rem;
-                }
-
-                li {
-                    a {
-                        margin-left: 2rem;
-                    }
-
-                    li {
-                        a {
-                            margin-left: 2.5rem;
-                        }
-
-                        li {
-                            a {
-                                margin-left: 3rem;
-                            }
-
-                            li {
-                                a {
-                                    margin-left: 3.5rem;
-                                }
-
-                                li {
-                                    a {
-                                        margin-left: 4rem;
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
+    // box-shadow: 0px 3px 5px var(--primary-color), 0px 0px 2px var(--primary-color), 0px 1px 4px var(--primary-color);
 }
 
 
@@ -163,7 +43,7 @@
         &.layout-overlay {
             .layout-main-container {
                 margin-left: 0;
-                padding-left: 2rem;
+                padding-left: 0;
             }
 
             .layout-sidebar {
@@ -224,6 +104,7 @@
             height: 100vh;
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
+            background-color: var(--bluegray-900);
         }
 
         .layout-mask {
