--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,7 @@
 @import "primeicons/primeicons.css";
 @import url(../node_modules/primeflex/primeflex.scss);
 
+a {
+
+    text-decoration: none;
+}
