fixing movies poster

--- a/src/app/layout/components/dashboard/dashboard.component.html
+++ b/src/app/layout/components/dashboard/dashboard.component.html
@@ -8,11 +8,12 @@
     [numScroll]="1" 
     [circular]="true" 
     [responsiveOptions]="responsiveOptions" 
+    
     >
         <ng-template let-product pTemplate="item">
             <div class="p-0">
                 <div class="mb-6">
-                    <div class="h-re25m">
+                    <div class="h-full">
                         <img 
                             src="{{ product.image }}" 
                             [alt]="product.caption" 
@@ -28,11 +29,11 @@
  
 
     <section class="marvels">
-        <h2 class="capitalize">marvels universe</h2>
+        <h2 class="capitalize">marvel universe</h2>
         <div class="grid">
             @for (movie of marvels; track $index) {
-                <div class="col-12 md:col-6 lg:col-3 cursor-pointer">
-                    <div class="movies-card text-center border-round-sm border-1 border-primary font-bold h-20rem">
+                <div class="col-12 md:col-6 lg:col-2 cursor-pointer m-2">
+                    <div class="movies-card text-center border-round-sm border-1 border-primary font-bold  h-15rem">
                     <img class="w-full h-full" src="{{movie.poster}}" alt="{{movie.title}}">
                     </div>
                     </div>
