--- a/src/app/layout/components/dashboard/dashboard.component.html
+++ b/src/app/layout/components/dashboard/dashboard.component.html
@@ -31,6 +31,7 @@
     <section class="movies">
         <app-marvel></app-marvel>
         <app-action-scifi></app-action-scifi>
+        <app-thriller></app-thriller>
     </section>
 
     
