adding disney and pixar movies

--- a/src/app/layout/components/dashboard/dashboard.component.html
+++ b/src/app/layout/components/dashboard/dashboard.component.html
@@ -32,6 +32,7 @@
         <app-marvel></app-marvel>
         <app-action-scifi></app-action-scifi>
         <app-thriller></app-thriller>
+        <app-disney-pixar></app-disney-pixar>
     </section>
 
     
