--- a/src/app/layout/components/dashboard/movies/disney-pixar/disney-pixar.component.html
+++ b/src/app/layout/components/dashboard/movies/disney-pixar/disney-pixar.component.html
@@ -1,7 +1,7 @@
 <section class="Action-scifi">
-    <h2 class="capitalize">Action / Sci-fi</h2>
+    <h2 class="capitalize">disney-pixar</h2>
     <div class="grid">
-        @for (movie of ActionAndSciFi; track $index) {
+        @for (movie of disneyPixar; track $index) {
             <div class="col-12 md:col-6 lg:col-2 cursor-pointer m-2">
                 <div class="movies-card text-center border-round-sm border-1 border-primary font-bold  h-15rem">
                 <img class="w-full h-full" src="{{movie.poster}}" alt="{{movie.title}}">
