--- a/src/app/layout/components/dashboard/movies/thriller/thriller.component.html
+++ b/src/app/layout/components/dashboard/movies/thriller/thriller.component.html
@@ -6,6 +6,7 @@
                 <div class="movies-card text-center border-round-sm border-1 border-primary font-bold  h-15rem">
                 <img class="w-full h-full" src="{{movie.poster}}" alt="{{movie.title}}">
                 </div>
+                <p class="text-sm capitalize">{{movie.title}}</p>
                 </div>
         }
     </div>
