--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,7 +1,10 @@
 <section class="Action-scifi">
-    <!-- <h2 class="capitalize">Action / Sci-fi</h2> -->
-    <div class="grid">
-        @for (movie of movies; track $index) {
+    <p-iconField  iconPosition="left">
+        <p-inputIcon styleClass="pi pi-search" />
+        <input [(ngModel)]="searchMovies" type="text" pInputText placeholder="Search" style="width: 500px;" (ngModelChange)="filterMovies(searchMovies)" />
+    </p-iconField>
+    <div class="grid mt-5">
+        @for (movie of filteredMovies; track $index) {
             <div class="col-12 md:col-6 lg:col-2 cursor-pointer m-2">
                 <div class="movies-card text-center border-round-sm border-1 border-primary font-bold  h-15rem">
                 <img class="w-full h-full" src="{{movie.poster}}" alt="{{movie.title}}">
