--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -4,6 +4,9 @@
         <input [(ngModel)]="searchMovies" type="text" pInputText placeholder="Search" style="width: 500px;" (ngModelChange)="filterMovies(searchMovies)" />
     </p-iconField>
     <div class="grid mt-5">
+        @if (filteredMovies.length === 0) {
+                <h2>No movies found !</h2>
+        }
         @for (movie of filteredMovies; track $index) {
             <div class="col-12 md:col-6 lg:col-2 cursor-pointer m-2">
                 <div class="movies-card text-center border-round-sm border-1 border-primary font-bold  h-15rem">
