adding movies-details component

--- a/src/app/layout/components/dashboard/movies/marvel/marvel.component.html
+++ b/src/app/layout/components/dashboard/movies/marvel/marvel.component.html
@@ -7,6 +7,7 @@
                 <img class="w-full h-full" src="{{movie.poster}}" alt="{{movie.title}}">
                 </div>
                 <p class="text-sm capitalize">{{movie.title}}</p>
+                <a [routerLink]=""></a>
                 </div>
         }
     </div>
