--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -13,6 +13,7 @@
                 <img class="w-full h-full" src="{{movie.poster}}" alt="{{movie.title}}">
                 </div>
                 <p class="text-sm capitalize">{{movie.title}}</p>
+                <a [routerLink]="'movies-details'">movie details</a>
                 </div>
         }
     </div>
