fixing the layout issue

--- a/src/app/layout/components/side-bar/side-bar.component.html
+++ b/src/app/layout/components/side-bar/side-bar.component.html
@@ -13,7 +13,7 @@
             @for (item of navitems.items; track $index) {
                     <li 
                         class="cursor-pointer
-                         p-2 mt-2 hover:surface-200"
+                         p-2 mt-2 hover:surface-200 w-14rem"
                         [routerLink]="item.routerLink">
                         <a class="no-underline"
                          routerLinkActive="text-primary font-bold">
