adding movie details

--- a/src/app/movies/movie-details/movie-details.component.html
+++ b/src/app/movies/movie-details/movie-details.component.html
@@ -1,15 +1,21 @@
 <div class="grid card">
-    <div class="col-12 md:col-6 lg:col-12 h-20rem bg-primary p-0">
+    <div class="col-12 md:col-6 lg:col-12 h-25rem  p-0">
         <div class="text-center m-0 border-round-sm font-bold">
-            <img class="w-full h-20rem banner-img" src="{{backgroundImageUrl}}" alt="">
+            @if (movie.banner) {
+                <img class="w-full h-25rem" src="{{movie.banner}}" alt="">
+            }
+            @else {
+                <img class="w-full h-20rem" src="../../../assets/images/image-temp.svg" alt="">
+            }
+                       <!-- <img class="w-full h-20rem" [src]="movie.poster ? 'movie.poster' : '../../../assets/images/image-temp.svg'" alt="Image"> -->
         </div>
     </div>
     <div class="col-12 md:col-6 lg:col-6  h-20rem">
         <div class="border-round-sm  font-bold">
-            <h2 class="capitalize">elysium</h2>
+            <h2 class="capitalize">{{movie.title}}</h2>
             <p-rating [(ngModel)]="value" [cancel]="false" />
             <p class="text-base font-light text-sm line-height-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ducimus dolorum blanditiis saepe, odit deleniti sit dignissimos hic magni neque!</p>
-            <p-button size="small" label="Watch" icon="pi pi-eye"  />
+            <p-button class="custom-icon" size="small" label="Play" icon="pi pi-play" iconPos="right" />
         </div>
     </div>
     <div class="col-12 md:col-6 lg:col-6  h-20rem">
