adding  year filter

--- a/src/app/movies/movie-details/movie-details.component.html
+++ b/src/app/movies/movie-details/movie-details.component.html
@@ -1,4 +1,6 @@
-<div class="grid card">
+<section class="movies-details">
+<span [routerLink]="'/nextplay/movies'"><i  class="pi pi-arrow-left mb-5 cursor-pointer" style="font-size: 1rem"></i></span>
+    <div class="grid card">
     <div class="col-12 md:col-6 lg:col-12 h-25rem  p-0">
         <div class="text-center m-0 border-round-sm font-bold">
             @if (movie.banner) {
@@ -26,3 +28,4 @@
         </div>
     </div>
 </div>
+</section>
