adding video player component

--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -20,7 +20,7 @@
         </div>
         @if (filter) {
             <div class="col-12 md:col-6 lg:col-3">
-                <p-button (click)="clear()" label="Clear Filter" [text]="true" severity="success" />
+                <p-button (click)="clear()" label="Clear Filter" icon="pi pi-times" [text]="true" />
             </div>
         }
         
