--- a/src/app/movies/movie-details/movie-details.component.html
+++ b/src/app/movies/movie-details/movie-details.component.html
@@ -9,7 +9,6 @@
             @else {
                 <img class="w-full h-20rem" src="../../../assets/images/image-temp.svg" alt="">
             }
-                       <!-- <img class="w-full h-20rem" [src]="movie.poster ? 'movie.poster' : '../../../assets/images/image-temp.svg'" alt="Image"> -->
         </div>
     </div>
     <div class="col-12 md:col-6 lg:col-6  h-20rem">
@@ -17,7 +16,7 @@
             <h2 class="capitalize">{{movie.title}}</h2>
             <p-rating [(ngModel)]="value" [cancel]="false" />
             <p class="text-base font-light text-sm line-height-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ducimus dolorum blanditiis saepe, odit deleniti sit dignissimos hic magni neque!</p>
-            <p-button class="custom-icon" size="small" label="Play" icon="pi pi-play" iconPos="right" />
+            <p-button (click)="watchMovie = true" class="custom-icon" size="small" label="Play" icon="pi pi-play" iconPos="right" />
         </div>
     </div>
     <div class="col-12 md:col-6 lg:col-6  h-20rem">
@@ -29,3 +28,17 @@
     </div>
 </div>
 </section>
+
+
+<p-sidebar [(visible)]="watchMovie" [fullScreen]="true">
+    <ng-template pTemplate="header">
+        <span class="font-semibold text-xl">
+            Sidebar
+        </span>
+    </ng-template>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit...
+    </p>
+    
+</p-sidebar>
+<!-- <p-button  icon="pi pi-window-maximize" /> -->
