--- a/src/app/layout/components/side-bar/side-bar.component.html
+++ b/src/app/layout/components/side-bar/side-bar.component.html
@@ -12,7 +12,7 @@
         @if (navitems.items) {
             @for (item of navitems.items; track $index) {
                     <li 
-                        class="cursor-pointer
+                        class="cursor-pointer border-round
                          p-2 mt-2 hover:surface-200 w-14rem"
                         [routerLink]="item.routerLink">
                         <a class="no-underline"
