--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 @import url(../node_modules/primeflex/primeflex.scss);
+@import url(../node_modules/video.js/dist/video-js.css);
 
 a {
 
