--- a/src/app/movies/movie-details/movie-details.component.html
+++ b/src/app/movies/movie-details/movie-details.component.html
@@ -16,55 +16,8 @@
             <h2 class="capitalize">{{movie.title}}</h2>
             <p-rating [(ngModel)]="movie.rating" [cancel]="false" />
             <p class="text-base font-light text-sm line-height-3">{{movie.description}}</p>
-            <p-button (click)="watchMovie = true" class="custom-icon" size="small" label="Play" icon="pi pi-play" iconPos="right" />
-        </div>
-    </div>
-    <div class="col-12 md:col-6 lg:col-6  h-20rem">
-        <div class="p-3 border-round-sm  font-bold mt-7">
-            
-
-
+            <p-button (click)="show()" class="custom-icon" size="small" label="Play" icon="pi pi-play" iconPos="right" />
         </div>
     </div>
 </div>
 </section>
-
-
-<p-sidebar [(visible)]="watchMovie" [fullScreen]="true">
-    <!-- <ng-template pTemplate="header">
-        <span class="font-semibold text-xl bg-black">
-            <h2 class="capitalize">{{movie.title}}</h2>
-            
-        </span>
-    </ng-template> -->
-
-<div class="surface-0  bg-black-alpha-90  shadow-2 border-round p-4">
-    <div class="text-3xl bg-black-alpha-90 font-medium">{{movie.title}}</div>
-    <div class="font-medium  bg-black-alpha-90 text-center">
-         <video
-       #target 
-       class="video-js"
-       controls muted playsinline
-       preload="none"
-       width="80%" height="30%" 
-       ><source 
-       [src]="videoLink"
-       type="video/mp4">
-
-</video>
-    </div>
-    
-</div>
-            
-     
-    <!-- <video #target class="video-js" controls muted playsinline preload="none"></video> -->
-
-    <!-- <video id="my-video" class="video-js vjs-default-skin" controls preload="auto" width="640" height="264">
-        <source src="path/to/your/video.mp4" type="video/mp4">
-        Include other video sources here (WebM, Ogg, etc.)
-        Your browser does not support the video tag.
-      </video> -->
-    
-   
-</p-sidebar>
-<!-- <p-button  icon="pi pi-window-maximize" /> -->
