removing the carousel

--- a/src/app/layout/components/dashboard/dashboard.component.scss
+++ b/src/app/layout/components/dashboard/dashboard.component.scss
@@ -8,9 +8,9 @@
     object-fit: cover;
 }
 
-.movies {
-    margin-top: 17rem;
-}
+// .movies {
+//     margin-top: 17rem;
+// }
 
 
 .movies-card {
