--- a/src/app/layout/components/dashboard/dashboard.component.html
+++ b/src/app/layout/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <section class="dashboard">
-    <div class="grid">
+    <!-- <div class="grid">
         <div class="col-12 md:col-6 lg:col-12 h-26rem p-0 m-0">
             <h1 class="mx-6 text-base"><p-tag class="mx-2"  value="New"/>Release</h1>
             <p-carousel 
@@ -24,7 +24,7 @@
         </ng-template>
 </p-carousel>
         </div>
-    </div>
+    </div> -->
 </section>
  
 
